--- a/style/style.css
+++ b/style/style.css
@@ -3,7 +3,7 @@
 *::after {
     box-sizing: border-box;
 }
-body{
+.body-1{
   background-image: url('https://emerging-europe.com/wp-content/uploads/2019/03/bigstock-gorgeous-spring-countryside-la-280866130-990x556.jpg');
   background-size: cover;
   background-position: center center;
@@ -20,7 +20,8 @@ body{
   }
 }
 aside {
-  background-color: #000;
+  background-color: black;
+  opacity: 0.6;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -48,4 +49,28 @@ aside a {
   display: block;
   text-align: center;
   padding: 15px;
+}
+.img-fluid{
+  width: 100% !important;
+  height: 500px !important;
+
+}
+.title{
+  font-size: 10em;
+  opacity: 0.5;
+  padding: 40px;
+  margin-left:-5px;
+}
+
+h3.my-profession {
+  font-size: 30px;
+  margin: 15px 0;
+}
+
+.typing {
+  color:red;
+}
+.logo{
+  width: 22em;
+  opacity: 0.9 !important;
 }
