--- a/style/style.css
+++ b/style/style.css
@@ -1,76 +1,160 @@
-*,
-*::before,
-*::after {
-    box-sizing: border-box;
-}
-.body-1{
-  background-image: url('https://emerging-europe.com/wp-content/uploads/2019/03/bigstock-gorgeous-spring-countryside-la-280866130-990x556.jpg');
-  background-size: cover;
-  background-position: center center;
-  display: flex;
-  font-family: "Prata", sans-serif;
-  margin: 0;
-  min-height: 100vh;
-
-}
-@media screen and (min-width:300px) and (max-width:500px) {
-  body {
-    width: 100%;
-    height: 200px;
-  }
-}
-aside {
-  background-color: black;
-  opacity: 0.6;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  padding: 2rem;
-  width: 300px;
-  height: 100vh;
-}
-
-aside ul {
-  padding: 0;
-  list-style-type: none;
-}
-
-aside a {
-  color: white;
-  display: inline-block;
-  font-size: 2rem;
-  text-decoration: none;
-  margin: 0.5rem;
-}
-
-.special {
-  background-color: #FEAB51;
-  color: black;
-  display: block;
-  text-align: center;
-  padding: 15px;
-}
-.img-fluid{
-  width: 100% !important;
-  height: 500px !important;
-
-}
-.title{
-  font-size: 10em;
-  opacity: 0.5;
-  padding: 40px;
-  margin-left:-5px;
-}
-
-h3.my-profession {
-  font-size: 30px;
-  margin: 15px 0;
-}
-
-.typing {
-  color:red;
-}
-.logo{
-  width: 22em;
-  opacity: 0.9 !important;
-}
+    @import url('https://fonts.googleapis.com/css2?family=Courgette&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap');
+    *,
+    *::before,
+    *::after {
+        box-sizing: border-box;
+    }
+    /* page home  */
+    
+    .body_index {
+        background-image: url('https://images.unsplash.com/photo-1526112982068-f899a62e118e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80');
+        background-size: cover;
+        background-position: center center;
+        display: flex;
+        overflow: hidden;
+        font-family: "Prata", sans-serif;
+        margin: 0;
+        min-height: 100vh;
+    }
+    
+    .country {
+        color: white;
+        font-size: 13em;
+        font-family: 'Courgette', cursive;
+        text-align: center;
+        margin-top: 1.5em;
+    }
+    
+    .clouds {
+        margin-top: -290px !important;
+    }
+    
+    .cloud1 {
+        background: url("http://pngimg.com/uploads/cloud/cloud_PNG24.png");
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        background-repeat: no-repeat;
+        animation: move 10s infinite;
+    }
+    
+    .cloud2 {
+        background: url("http://pngimg.com/uploads/cloud/cloud_PNG24.png");
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        background-repeat: no-repeat;
+        animation: move 20s infinite;
+    }
+    
+    .cloud3 {
+        background: url("https://sitejerk.com/images/transparent-clouds-3.png");
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        background-repeat: no-repeat;
+        animation: move 30s infinite;
+        filter: blur(3px);
+    }
+    
+    .cloud4 {
+        background: url("http://pngimg.com/uploads/cloud/cloud_PNG24.png");
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        background-repeat: no-repeat;
+        animation: move 40s infinite;
+    }
+    
+    .cloud5 {
+        background: url("http://pngimg.com/uploads/cloud/cloud_PNG24.png");
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        background-repeat: no-repeat;
+        animation: move 50s infinite;
+        filter: blur(3px);
+    }
+    
+    .cloud6 {
+        background: url("http://pngimg.com/uploads/cloud/cloud_PNG24.png");
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        background-repeat: no-repeat;
+        animation: move 60s infinite;
+    }
+    
+    @keyframes move {
+        from {
+            transform: translateX(1800px);
+        }
+        to {
+            transform: translateX(-100px);
+        }
+    }
+    
+    .typing {
+        color: red;
+    }
+    /* common code */
+    
+    aside {
+        background-color: black;
+        opacity: 0.7;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        padding: 2rem;
+        width: 300px;
+        height: 100vh;
+    }
+    
+    aside ul {
+        padding: 0;
+        list-style-type: none;
+    }
+    
+    aside a {
+        color: white;
+        display: inline-block;
+        font-size: 2rem;
+        text-decoration: none;
+        margin: 0.5rem;
+    }
+    
+    .special {
+        background-color: #FEAB51;
+        color: black;
+        display: block;
+        text-align: center;
+        padding: 15px;
+    }
+    
+    .logo {
+        width: 20em;
+        margin-top: 0;
+        height: 500px;
+        opacity: 1.0;
+    }
+    /* page places */
+    
+    .bg-places {
+        display: flex;
+        font-family: "Prata", sans-serif;
+        width: 130em;
+        height: 300px;
+        display: flex;
+    }
+    
+    .h1 {
+        margin: 15px;
+        padding: 20px;
+        font-family: 'Raleway', sans-serif;
+    }
+    
+    .card-group .card {
+        margin-left: 20px !important;
+        margin-top: 10px;
+    }
