--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,9 @@
     @import url('https://fonts.googleapis.com/css2?family=Courgette&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Zilla+Slab&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Mulish:wght@300&display=swap');
+    ;
     *,
     *::before,
     *::after {
@@ -16,14 +20,17 @@
         font-family: "Prata", sans-serif;
         margin: 0;
         min-height: 100vh;
+        height: 100%;
+        width: 100%;
     }
     
     .country {
-        color: white;
         font-size: 13em;
         font-family: 'Courgette', cursive;
         text-align: center;
-        margin-top: 1.5em;
+        width: 7em;
+        -webkit-text-stroke-width: 2px;
+        -webkit-text-stroke-color: black;
     }
     
     .clouds {
@@ -94,58 +101,43 @@
             transform: translateX(-100px);
         }
     }
-    
-    .typing {
-        color: red;
-    }
     /* common code */
     
     aside {
         background-color: black;
         opacity: 0.7;
-        display: flex;
         flex-direction: column;
         justify-content: space-between;
-        padding: 2rem;
-        width: 300px;
-        height: 100vh;
+        padding: 3rem;
+        width: 250px;
+        height: 100%;
     }
     
     aside ul {
         padding: 0;
         list-style-type: none;
+        margin-top: 20px;
     }
     
     aside a {
         color: white;
         display: inline-block;
-        font-size: 2rem;
+        font-size: 1.75rem;
         text-decoration: none;
         margin: 0.5rem;
     }
-    
-    .special {
-        background-color: #FEAB51;
-        color: black;
-        display: block;
-        text-align: center;
-        padding: 15px;
-    }
-    
-    .logo {
-        width: 20em;
-        margin-top: 0;
+    /* .logo {
+        m margin-top: 0;
         height: 500px;
         opacity: 1.0;
-    }
+    } */
     /* page places */
     
-    .bg-places {
+    .body-places {
         display: flex;
         font-family: "Prata", sans-serif;
-        width: 130em;
-        height: 300px;
-        display: flex;
+        margin-bottom: 0px !important;
+        overflow-x: hidden;
     }
     
     .h1 {
@@ -157,4 +149,44 @@
     .card-group .card {
         margin-left: 20px !important;
         margin-top: 10px;
+        margin-bottom: 20px;
     }
+    
+    .modal-dialog {
+        max-width: 1000px !important;
+        margin: auto;
+    }
+    
+    .card-img-top {
+        height: 300px;
+    }
+    
+    .modal-title {
+        margin-left: 450px;
+    }
+    /* page places/brasov */
+    
+    .image {
+        max-height: 600px;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 90%;
+    }
+    
+    .typing {
+        color: green;
+        margin-left: 11em;
+        font-family: 'Lobster', cursive;
+        font-size: 60px;
+    }
+    
+    .btn-next {
+        float: right;
+    }
+    
+    .container-fluid {
+        margin-bottom: 10px;
+        font-family: 'Mulish', sans-serif;
+    }
+    /* page places/iasi */
